# internal/routers/api/v1/tag.go
@@ -1,6 +1,11 @@
 package v1
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/Acyclonepl/Blog-basedon-gin/global"
+	"github.com/Acyclonepl/Blog-basedon-gin/pkg/app"
+	"github.com/Acyclonepl/Blog-basedon-gin/pkg/errcode"
+	"github.com/gin-gonic/gin"
+)
 
 type Tag struct{}
 
@@ -10,42 +15,57 @@ func NewTag() Tag {
 
 func (t Tag) Get(c *gin.Context) {}
 
-//@Summary 获取多个标签
-//@Produce json
-//@Param name query string false "标签名称" maxlength(100)
-//@Param state query int false "状态" Enums(0,1) default(1)
-//@Param page query int false "页码"
-//@Param page_size query int false "每页数量"
-//@Success 200 {object} model.TagSwagger "成功"
-//@Failure 400 {object} errcode.Error "请求错误"
-//@Failure 500 {object} errcode.Error "内部错误"
-//@Router /api/v1/tags [get]
-func (t Tag) List(c *gin.Context) {}
+// @Summary 获取多个标签
+// @Produce json
+// @Param name query string false "标签名称" maxlength(100)
+// @Param state query int false "状态" Enums(0,1) default(1)
+// @Param page query int false "页码"
+// @Param page_size query int false "每页数量"
+// @Success 200 {object} model.TagSwagger "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags [get]
+func (t Tag) List(c *gin.Context) {
+	param := struct {
+		Name  string `form:"name" binding:"max=100"`
+		State uint8  `form:"state,default=l" binding:"oneof=0 1"`
+	}{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		errRsp := errcode.InvalidParams.WithDetails(errs.Errors()...)
+		response.ToErrorResponse(errRsp)
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
+}
 
-//@Summary 新增标签
-//@Produce json
-//@Param request body model.CreateTagRequest true "创建标签请求"
-//@Success 200 {object} model.TagSwagger "成功"
-//@Failure 400 {object} errcode.Error "请求错误"
-//@Failure 500 {object} errcode.Error "内部错误"
-//@Router /api/v1/tags [post]
+// @Summary 新增标签
+// @Produce json
+// @Param request body model.CreateTagRequest true "创建标签请求"
+// @Success 200 {object} model.TagSwagger "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {}
 
-//@Summary 更新标签
-//@Produce json
-//@Param id path int true "标签ID"
-//@Param request body model.UpdateTagRequest true "更新标签请求"
-//@Success 200 {object} model.TagSwagger "成功"
-//@Failure 400 {object} errcode.Error "请求错误"
-//@Failure 500 {object} errcode.Error "内部错误"
-//@Router /api/v1/tags/{id} [put]
+// @Summary 更新标签
+// @Produce json
+// @Param id path int true "标签ID"
+// @Param request body model.UpdateTagRequest true "更新标签请求"
+// @Success 200 {object} model.TagSwagger "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {}
 
-//@Summary 删除标签
-//@Produce json
-//@Param id path int true "标签ID"
-//@Success 200 {string} string "成功"
-//@Failure 400 {object} errcode.Error "请求错误"
-//@Failure 500 {object} errcode.Error "内部错误"
-//@Router /api/v1/tags/{id} [delete]
+// @Summary 删除标签
+// @Produce json
+// @Param id path int true "标签ID"
+// @Success 200 {string} string "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {}
